--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,6 @@
-body{
+  body{
   background: #9FF8AC;
+
 }
 .divBody{
   width:1350px;
@@ -110,8 +111,11 @@ h1{
 
    @media only screen and (min-device-width : 320px) and (max-device-width : 600px) {
      h1{
-       font-size: 5.5em;
+       font-size: 6em;
      }
+     h2{
+       font-size: 3em;
+       }
      .image1{
        width: 17em;
        height: 17em;
@@ -131,6 +135,7 @@ h1{
        width: 100%;
        padding: 0;
        margin: auto;
+
      }
      .rchaild p{
        font-size: 2.2em;
